fix(PunishmentCrewDeath)